fixed button arrow alignement

--- a/htdocs/showcase/revcontent-api-showcase-slider-1.0/css/revslider.css
+++ b/htdocs/showcase/revcontent-api-showcase-slider-1.0/css/revslider.css
@@ -37,11 +37,11 @@
 }*/
 
 #rev-slider .rev-chevron {
+    position: absolute;
     font-family: arial narrow;
     font-size: 58px;
     color: #000000;
     line-height: .5;
-    height: 100%;
     width: 50px;
     top: 50%;
 }
